# election-data

./: .gitignore  README.md  pyproject.toml  release.sh
docs/: README.md  index.css  index.html  index.js
election_data/: __init__.py  _mode.py  util.py
election_data/tests/: __init__.py  common.py  conftest.py  test_candidate.py  test_district.py  test_jurisdiction.py  test_mode.py  test_office.py  test_party.py  test_schema.py  test_state.py  test_year.py
notebooks/: MEDSL_cleanup.ipynb  va.ipynb
